<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--
         By: May Camp
         can't find: addedittask_notecolon ?
    	 just use  : task_notecolon 
    	 
    	 same goes for: timerequiredcolon
    	 				categorycolon
    	 				importancecolon
    	 				reminderscolon
    	 				colorcolon
    	 				notatall
    	 				extremely
    	 				always
    	 				never
    -->

    <string name="app_name">Mo Mi</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_mome">Mo Me</string>
    <string name="title_motivateme">Motivate Me!</string>
    <string name="title_todolist">To Do List</string>
    <string name="title_task">Task</string>
    <string name="title_addedittask">Add/Edit Task</string>
    <string name="title_settings">Settings</string>
    <string name="title_help">Help</string>
    <string name="button_todolist">To Do List</string>
    <string name="mome_dialog_welcome">Welcome to Mo Me!!! I\'m your personal motivator!</string>

    <string-array name="mome_dialog_quote">
        <item>&quot;If you wait for perfect conditions, you will never get anything done.&quot; -Ecclesiastes 11:4</item>
If you wait for perfect conditions, you will never get anything done.</string-array>

    <string name="mome_dialog_duedate">Your most recent due date is in 8 hours! Perhaps you should work on that task?</string>
    <string name="mome_button_motivateme">Motivate Me!</string>
    <string name="motivateme_dialog_welcome">What type of motivation do you need?</string>
    <string name="motivateme_button_todolist">Too Much To Do!</string>
    <string name="todolist_dialog_welcome">Making a To Do List would help organize what you have to do.</string>
    <string name="todolist_button_addtask">Add Task</string>
    <string name="todolist_button_expand">Expand</string>
    <string name="task_button_completed">Completed</string>
    <string name="task_button_edit">Edit</string>
    <string name="task_button_back">Back</string>
    <string name="task_namecolon">Name: </string>
    <string name="task_duecolon">Due: </string>
    <string name="task_timerequiredcolon">Time Required to Complete: </string>
    <string name="task_categorycolon">Category: </string>
    <string name="task_colorcolon">Color: </string>
    <string name="task_importancecolon">Importance: </string>
    <string name="task_reminderscolon">Reminders: </string>
    <string name="task_notatall">Not at all</string>
    <string name="task_extremely">Extremely</string>
    <string name="task_always">Always</string>
    <string name="task_never">Never</string>
    <string name="task_notecolon">Note: </string>
    <string name="addedittask_textfield_nameoftask">Name of Task</string>
    <string name="addedittask_duedatequestion">Due Date?</string>
    <string name="addedittask_timequestion">Time?</string>
    <string name="category_job">Job</string>
    <string name="category_school">School</string>
    <string name="category_recreation">Recreation</string>
    <string name="category_home">Home</string>
    <string name="category_social">Social</string>
    <string name="category_shopping">Shopping</string>
    <string name="category_habits">Habits</string>
    <string name="title_activity_task">Task</string>
    <string name="task_button_delete">Delete</string>
    <string name="title_activity_motivate_me">MotivateMe</string>
    <string name="motivateme_button_suggestionlist">Too Little To Do!</string>
    <string name="motivateme_button_social">I Need Coaching/Help!</string>
    <string name="motivateme_button_habits">I Have/Need Habits!</string>
    <string name="title_activity_im_motivational">ImMotivational</string>
    <string name="social_button_randomperson">Random Person</string>
    <string name="social_previousmotivatorscolon">Previous Motivators: </string>
    <string name="social_friendsavailablecolon">Friends Available: </string>
    <string name="social_requestfromspecificfriendcolon">Request From Specific Friend: </string>
    <string name="social_autocomplete_friendsname">Enter Friend\'s Name</string>
    <string name="social_button_request">Request</string>
    <string name="title_activity_social">Social</string>
    <string name="immotivational_introcolon">Intro: </string>
    <string name="immotivational_introdefault">How can I help you?</string>
    <string name="immotivational_button_setintro">Set Intro</string>
    <string name="immotivational_yourcurrentratingcolon">Your Current Rating: </string>
    <string name="immotivational_yourmotivateescolon">Your Motivatees: </string>
    <string name="title_activity_im_motivational_prompt">ImMotivationalPrompt</string>
    <string name="immotivational_button_friendsonly">Friends Only</string>
    <string name="immotivational_button_anyone">Anyone</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_add_task">AddTask</string>
    <string name="addtask_nameoftask">Name of Task</string>
    <string name="addtask_duedatequestion">Due Date?</string>
    <string name="addtask_timequestion">Time?</string>
    <string name="main_username">Username</string>
    <string name="main_password">Password</string>
    <string name="main_login">Login</string>
    <string name="main_signup">Sign up</string>
    <string name="addtask_dayscolon">Days: </string>
    <string name="addtask_days">Days</string>
    <string name="addtask_timerequiredtofinishcolon">Time Required to Finish: </string>
    <string name="addtask_hours">Hours</string>
    <string name="title_activity_login">Mo Mi</string> <!-- NAME OF APP -->
    <string name="addtask_minutes">Mins</string>
    <string name="addtask_exactremindersquestion">Exact Reminders?</string>
    <string name="addtask_weeks">Weeks</string>
    <string name="addtask_beforeduedate">Before Due Date</string>
    <string name="addtask_button_addreminder">Add Reminder</string>
    <string name="addtask_notescolon">Notes: </string>
    <string name="addtask_button_addtask">Add Task</string>
    <string name="main_or">- or -</string>
    <string name="todolist_label">To Do List</string>
    <string name="addtask_category">Category</string>
    <string name="addtask_entercategory">Enter Category</string>
    <string name="title_activity_to_do_list">To Do List</string>
    <string name="main_immotivational">I\'m Motivational</string>

    <color name="text_color">#000000</color>


    <string name="title_immotivational">I\'m Motivational!</string>

    <string name="addtask_requiredcolon">Required: </string>

    <string name="addtask_extrainfocolon">Extra Information: </string>

    <string name="chat_button_send">Send</string>

    <string name="chat_typetochat">Type to chat...</string>

    <string name="chat_listofchatmessages">Chat messages would go here.
For example (not correctly formatted):
Motiv Ator: Hi, how can I help?
Motiva Tee: I really don\'t feel like finishing my homework!
Motiv Ator: Well, when is it due?
Motiva Tee: In 3 days!
Motiv Ator: How much have you done so far?
Motiva Tee: None of it...
Motiv Ator: The hardest part is just starting it! How about just working on it for a few minutes? Just a few minutes shouldn\'t hurt, right?
Motiva Tee: Alright, I\'ll try.</string>

</resources>