<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddTask" xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        
        <TextView
            android:id="@+id/textView_required"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addtask_requiredcolon"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />
        
        <EditText
            android:id="@+id/editText_nameoftask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/textView_required"
            android:ems="10"
            android:hint="@string/addtask_nameoftask" />
        
        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText_nameoftask"
            android:ems="10"
            android:hint="@string/addtask_entercategory"
            android:textColor="@color/text_color" />
 		
        
        <ImageView
 		    android:id="@+id/divider01"
 		    android:paddingTop="30dp"
 		    android:paddingBottom="30dp"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:contentDescription="@string/title_motivateme"
        	android:layout_below="@id/autoCompleteTextView_category"
        	android:src="@drawable/divider" />
        
        <TextView
            android:id="@+id/textView_extrainfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider01"
            android:text="@string/addtask_extrainfocolon"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        
        

        <CheckBox
            android:id="@+id/checkBox_duedate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_below="@id/textView_extrainfo"
            android:text="@string/addtask_duedatequestion" />

        <DatePicker
            android:id="@+id/datePicker_duedate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkBox_duedate" />

        <CheckBox
            android:id="@+id/checkBox_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/datePicker_duedate"
            android:text="@string/addtask_timequestion" />

        <TimePicker
            android:id="@+id/timePicker_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkBox_time"
            android:layout_centerHorizontal="false"
            android:layout_centerVertical="true" />
        
        
        <ImageView
 		    android:id="@+id/divider02"
 		    android:paddingTop="20dp"
 		    android:paddingBottom="20dp"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:contentDescription="@string/title_motivateme"
        	android:layout_below="@id/timePicker_time"
        	android:src="@drawable/divider_light" />

        <TextView
            android:id="@+id/textView_timerequiredtofinish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider02"
            android:text="@string/addtask_timerequiredtofinishcolon"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_timerequiredtofinish"
            android:ems="4"
            android:inputType="number"
            android:hint="@string/addtask_days" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editText_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_timerequiredtofinish"
            android:layout_toRightOf="@id/editText_days"
            android:ems="4"
            android:inputType="number"
            android:hint="@string/addtask_hours" />

        <EditText
            android:id="@+id/editText_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_timerequiredtofinish"
            android:layout_toRightOf="@id/editText_hours"
            android:ems="4"
            android:inputType="number"
            android:hint="@string/addtask_minutes" />
        
        
        
        
        <ImageView
 		    android:id="@+id/divider03"
 		    android:paddingTop="20dp"
 		    android:paddingBottom="20dp"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:contentDescription="@string/title_motivateme"
        	android:layout_below="@id/editText_days"
        	android:src="@drawable/divider_light" />
        

        <TextView
            android:id="@+id/textView_importance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider03"
            android:text="@string/task_importancecolon"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/seekBar_importance_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_importance" />

        <TextView
            android:id="@+id/textView_importance_lowlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/seekBar_importance_answer"
            android:layout_below="@id/seekBar_importance_answer"
            android:text="@string/task_notatall"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView_importance_highlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/seekBar_importance_answer"
            android:layout_below="@id/seekBar_importance_answer"
            android:text="@string/task_extremely"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        
        <ImageView
 		    android:id="@+id/divider04"
 		    android:paddingTop="20dp"
 		    android:paddingBottom="20dp"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:contentDescription="@string/title_motivateme"
        	android:layout_below="@id/textView_importance_lowlabel"
        	android:src="@drawable/divider_light" />
        
        
        <TextView
            android:id="@+id/textView_reminders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider04"
            android:text="@string/task_reminderscolon"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/seekBar_reminders_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_reminders" />

        <TextView
            android:id="@+id/textView_reminders_lowlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/seekBar_reminders_answer"
            android:layout_below="@id/seekBar_reminders_answer"
            android:text="@string/task_never"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView_reminders_highlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/seekBar_reminders_answer"
            android:layout_below="@id/seekBar_reminders_answer"
            android:text="@string/task_always"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        
        <ImageView
 		    android:id="@+id/divider05"
 		    android:paddingTop="20dp"
 		    android:paddingBottom="20dp"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:contentDescription="@string/title_motivateme"
        	android:layout_below="@id/textView_reminders_lowlabel"
        	android:src="@drawable/divider_light" />
        
        <TextView
            android:id="@+id/textView_exactreminders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider05"
            android:text="@string/addtask_exactremindersquestion"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_exactremindertime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_exactreminders"
            android:layout_marginTop="16dp"
            android:ems="2"
            android:inputType="number" />

        <RadioGroup
            android:id="@+id/radioGroup_timeunit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_exactreminders"
            android:layout_toRightOf="@id/editText_exactremindertime" >

            <RadioButton
                android:id="@+id/radio_minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/addtask_minutes" />

            <RadioButton
                android:id="@+id/radio_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addtask_hours" />

            <RadioButton
                android:id="@+id/radio_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addtask_days" />

            <RadioButton
                android:id="@+id/radio_weeks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addtask_weeks" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView_beforeduedate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/editText_exactremindertime"
            android:layout_toRightOf="@id/radioGroup_timeunit"
            android:text="@string/addtask_beforeduedate"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_addreminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_beforeduedate"
            android:layout_toRightOf="@id/radioGroup_timeunit"
            android:text="@string/addtask_button_addreminder" />

        
        <ImageView
 		    android:id="@+id/divider06"
 		    android:paddingTop="20dp"
 		    android:paddingBottom="20dp"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:contentDescription="@string/title_motivateme"
        	android:layout_below="@id/radioGroup_timeunit"
        	android:src="@drawable/divider_light" />
        
        <TextView
            android:id="@+id/textView_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider06"
            android:text="@string/addtask_notescolon"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText_notes_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_notes"
            android:ems="10"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/button_addtask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:layout_below="@id/editText_notes_answer"
            android:onClick="sendData"
            android:text="@string/addtask_button_addtask" />



    </RelativeLayout>

</ScrollView>