<!-- By: May Camp -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MotivateMe" >
    
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

    <ImageView
        android:id="@+id/imageView_socialprompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/button_toomuchtodo"
        android:adjustViewBounds="true"
        android:contentDescription="h"
        android:src="@drawable/avatar_whatmotivation" />

    <Button
        android:id="@+id/button_toomuchtodo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView_socialprompt"
        android:layout_centerHorizontal="true"
        android:text="@string/motivateme_button_todolist" />

    <Button
        android:id="@+id/button_toolittletodo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_toomuchtodo"
        android:layout_centerHorizontal="true"
        android:text="@string/motivateme_button_suggestionlist" />

    <Button
        android:id="@+id/button_ineedcoachinghelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_toolittletodo"
        android:layout_centerHorizontal="true"
        android:text="@string/motivateme_button_social" />

    <Button
        android:id="@+id/button_ihaveneedhabits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_ineedcoachinghelp"
        android:layout_centerHorizontal="true"
        android:text="@string/motivateme_button_habits" />

</RelativeLayout>
</ScrollView>